--- a/assets/css/site-style.css
+++ b/assets/css/site-style.css
@@ -9,14 +9,10 @@ body {
 /* Add a black background color to the top navigation */
 .topnav {
     
-    overflow: hidden;
   border-radius: 2%;
   background-color: transparent;
   }
 
-
-
-  
  
 
   /* Style the links inside the navigation bar */
@@ -40,11 +36,11 @@ body {
   
   /* Add an active class to highlight the current page */
   .topnav a.active {
-    background-color: #9fa39f;
+    background-color: #ccc;
     color: white;
-    text-shadow: 2px 4px 12px #000000;
-    
+    box-shadow: 0 0 10px 3px #10bbff;
   }
+
   
   /* Hide the link that should open and close the topnav on small screens */
   .topnav .icon {
@@ -107,30 +103,15 @@ margin-top: 12px;
   }
 
 
-
-
-
-  .tooltip {
-    position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black;
+  
+  
+  ul li a:hover::before {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px #10bbff;
   }
   
-  .tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-  
-    /* Position the tooltip */
-    position: absolute;
-    z-index: 1;
+  ul li a:hover {
+    color: #10bbff;
+    box-shadow: 0 0 25px #10bbff;
+    text-shadow: 0 0 10px #10bbff;
   }
-  
-  .tooltip:hover .tooltiptext {
-    visibility: visible;
-  }
-  
