--- a/assets/css/site-style.css
+++ b/assets/css/site-style.css
@@ -1,7 +1,9 @@
 body {
   background: #232526;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #414345, #141516);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #414345, #141516); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
 }  
 
 
@@ -18,9 +20,8 @@ body {
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
-    
     display: block;
-    color: #f2f2f2;
+    color: #fdfdfd;
     text-align: center;
     padding: 14px 26px;
     text-decoration: none;
@@ -74,17 +75,22 @@ body {
   .container{
 
     display: flex;
+    flex-direction: row;
 justify-content: center;
 justify-items: center;
 
   }
 
+
 .social-buttons{
 
-  display: flex;
-  flex-direction: row;
-  list-style-type: none;
   
+ display: flex;
+  list-style-type: none;
+padding: 0%;
+  box-shadow: 0 0 10px 2px #10bbff;
+ margin-top: 12px;
+ margin-left: 10px;
 
 
 }
@@ -93,7 +99,7 @@ justify-items: center;
 
 display: flex;
 background-color: #ddd;
-margin-top: 12px;
+
 
 }
 @media screen and (max-width: 600px) {
