--- a/assets/css/style-curriculo.css
+++ b/assets/css/style-curriculo.css
@@ -338,7 +338,7 @@ a {
 .w3-badge,
 .w3-tag {
   background-color: #000;
-  color: #fff;
+  color: #ccc;
   display: inline-block;
   padding-left: 8px;
   padding-right: 8px;
@@ -354,7 +354,7 @@ a {
 }
 .w3-ul li {
   padding: 8px 16px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #ccc;
 }
 .w3-ul li:last-child {
   border-bottom: none;
@@ -410,7 +410,7 @@ a {
 .w3-dropdown-content {
   cursor: auto;
   color: #000;
-  background-color: #fff;
+  background-color: #ccc;
   display: none;
   position: absolute;
   min-width: 160px;
@@ -428,7 +428,7 @@ a {
 .w3-sidebar {
   height: 100%;
   width: 200px;
-  background-color: #fff;
+  background-color: #ccc;
   position: fixed !important;
   z-index: 1;
   overflow: auto;
@@ -466,7 +466,7 @@ a {
 }
 .w3-modal-content {
   margin: auto;
-  background-color: #fff;
+  background-color: #ccc;
   position: relative;
   padding: 0;
   outline: 0;
@@ -1463,7 +1463,7 @@ a {
 }
 .w3-text-teal,
 .w3-hover-text-teal:hover {
-  color: #009688 !important;
+  color: #414242 !important;
 }
 .w3-text-yellow,
 .w3-hover-text-yellow:hover {
@@ -1487,7 +1487,7 @@ a {
 .w3-hover-text-light-grey:hover,
 .w3-text-light-gray,
 .w3-hover-text-light-gray:hover {
-  color: #f1f1f1 !important;
+  color: #ccc !important;
 }
 .w3-text-dark-grey,
 .w3-hover-text-dark-grey:hover,
